--- a/css/main.css
+++ b/css/main.css
@@ -606,7 +606,7 @@ img {
   background-size: cover;
 }
 
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
     background-image: url("./img/mobile/hero/hero-img@2x.jpg");
   }
