--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,8 +8,8 @@
 }
 
 @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
   .hero {
     background-image: url("./img/mobile/hero/hero-img@2x.jpg");
   }
