--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -15,6 +15,14 @@
   }
 }
 
+@media (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("./img/mobile/hero/hero-img1.jpg");
+  }
+}
+
 // .hero {
 //   background: var(--footer-bgc);
 //   text-align: center;
