--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,9 +7,10 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav {
-    display: none;
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+    margin: 0 auto;
   }
 
   .menu-mobile {
@@ -130,6 +131,12 @@
         transform: rotate(90deg);
       }
     }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav {
+    display: none;
   }
 }
 
