--- a/sass/layout/_our-work.scss
+++ b/sass/layout/_our-work.scss
@@ -1,41 +1,47 @@
-.work-img {
-  padding-bottom: 94px;
-}
-
-.work-list {
-  display: flex;
-  margin-right: -30px;
-  margin-top: -30px;
-
-  &__item {
-    position: relative;
-    flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
-    margin-top: 30px;
-    width: 370px;
-    height: 294px;
-  }
-
-  &__title-wrapper {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 70px;
-    width: 100%;
-    background: rgba(47, 48, 58, 0.8);
-  }
-
-  &__title-wrap {
-    font-family: var(--main-font);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-
-    color: var(--main-bgc);
+@media (max-width: 1199) {
+  .work-img {
+    display: none;
   }
 }
+
+// .work-img {
+//   padding-bottom: 94px;
+// }
+
+// .work-list {
+//   display: flex;
+//   margin-right: -30px;
+//   margin-top: -30px;
+
+//   &__item {
+//     position: relative;
+//     flex-basis: calc(100% / 3 - 30px);
+//     margin-right: 30px;
+//     margin-top: 30px;
+//     width: 370px;
+//     height: 294px;
+//   }
+
+//   &__title-wrapper {
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     height: 70px;
+//     width: 100%;
+//     background: rgba(47, 48, 58, 0.8);
+//   }
+
+//   &__title-wrap {
+//     font-family: var(--main-font);
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+
+//     color: var(--main-bgc);
+//   }
+// }
