--- a/sass/layout/_work-desc.scss
+++ b/sass/layout/_work-desc.scss
@@ -1,59 +1,115 @@
-.selection {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.features-list {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-
-  &__item {
-    flex-basis: calc(100% / 4 - 30px);
-    margin-top: 30px;
-    margin-left: 30px;
-    max-width: 270px;
-    height: auto;
-
-    // &:not(:last-child) {
-    //   margin-right: 30px;
-    // }
-  }
-
-  & .title {
-    margin-bottom: 10px;
-    max-width: 270px;
-
-    font-family: var(--main-font);
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--title-text-color);
-  }
-
-  & .title-text {
-    max-width: 270px;
-    font-family: var(--main-font);
-    font-weight: 400;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-  }
-
-  &__img {
-    display: flex;
+@media screen and (min-width: 480px) {
+  .features-list {
     align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-    width: 270px;
-    height: 120px;
-    background: var(--team-selection-bgc);
-    border-radius: 4px;
+
+    &__item {
+      height: auto;
+
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+
+    & .title {
+      margin-bottom: 10px;
+      text-align: center;
+
+      font-family: var(--main-font);
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: var(--title-text-color);
+    }
+
+    & .title-text {
+      font-family: var(--main-font);
+      font-weight: 400;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+    }
+
+    &__img {
+      max-width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 30px;
+      width: 450px;
+      height: 120px;
+      background: var(--team-selection-bgc);
+      border-radius: 4px;
+    }
+
+    &__icon {
+      width: 70px;
+      height: 70px;
+    }
   }
 
-  &__icon {
-    width: 70px;
-    height: 70px;
+  .selection {
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
+
+// .selection {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
+
+// .features-list {
+//   display: flex;
+//   align-items: center;
+//   flex-wrap: wrap;
+//   margin-top: -30px;
+//   margin-left: -30px;
+
+//   &__item {
+//     flex-basis: calc(100% / 4 - 30px);
+//     margin-top: 30px;
+//     margin-left: 30px;
+//     max-width: 270px;
+//     height: auto;
+
+//     // &:not(:last-child) {
+//     //   margin-right: 30px;
+//     // }
+//   }
+
+//   & .title {
+//     margin-bottom: 10px;
+//     max-width: 270px;
+
+//     font-family: var(--main-font);
+//     font-weight: 700;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     color: var(--title-text-color);
+//   }
+
+//   & .title-text {
+//     max-width: 270px;
+//     font-family: var(--main-font);
+//     font-weight: 400;
+//     line-height: 1.71;
+//     letter-spacing: 0.03em;
+//   }
+
+//   &__img {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     margin-bottom: 30px;
+//     width: 270px;
+//     height: 120px;
+//     background: var(--team-selection-bgc);
+//     border-radius: 4px;
+//   }
+
+//   &__icon {
+//     width: 70px;
+//     height: 70px;
+//   }
+// }
