--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -44,7 +44,7 @@
   color: var(--title-text-color);
 }
 
-.invite-title {
+.invite__title {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
