--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
   padding-left: 15px;
+  width: 480px;
 }
 
 .is-open {
@@ -8,10 +9,10 @@
 }
 
 @media screen and (min-width: 480px) {
-  .container {
-    max-width: 480px;
-    margin: 0 auto;
-  }
+  // .container {
+  //   width: 480px;
+  //   margin: 0 auto;
+  // }
 
   .menu-mobile {
     background-color: transparent;
