--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,19 +1,32 @@
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .clients-list {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+
+  &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 210px;
+    height: 92px;
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 2 - 30px);
+  }
 
   &__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
-    height: 90px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #afb1b8;
     box-sizing: border-box;
     border-radius: 4px;
@@ -59,3 +72,65 @@
     height: 45px;
   }
 }
+
+// .clients {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
+
+// .clients-list {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+
+//   &__link {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     width: 170px;
+//     height: 90px;
+//     border: 1px solid #afb1b8;
+//     box-sizing: border-box;
+//     border-radius: 4px;
+//     fill: #afb1b8;
+
+//     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &:hover,
+//     &:focus {
+//       border-color: var(--focus-color);
+//       fill: var(--focus-color);
+//     }
+//   }
+
+//   &__icon1 {
+//     width: 44px;
+//     height: 49px;
+//   }
+
+//   &__icon2 {
+//     width: 40px;
+//     height: 52px;
+//   }
+
+//   &__icon3 {
+//     width: 41px;
+//     height: 42px;
+//   }
+
+//   &__icon4 {
+//     width: 80px;
+//     height: 42px;
+//   }
+
+//   &__icon5 {
+//     width: 59px;
+//     height: 47px;
+//   }
+
+//   &__icon6 {
+//     width: 88px;
+//     height: 45px;
+//   }
+// }
