--- a/sass/layout/_team-selection.scss
+++ b/sass/layout/_team-selection.scss
@@ -1,61 +1,59 @@
-@media screen and (min-width: 480px) {
-  .team-section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background: var(--team-selection-bgc);
-  }
+.team-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: var(--team-selection-bgc);
+}
 
-  .team {
-    text-align: center;
+.team {
+  text-align: center;
 
-    &__worker {
-      background: var(--main-bgc);
-      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  &__worker {
+    background: var(--main-bgc);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
 
-      &:not(:last-child) {
-        margin-bottom: 30px;
-      }
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
 
-      &_info {
-        padding-top: 30px;
-        padding-bottom: 24px;
-      }
+    &_info {
+      padding-top: 30px;
+      padding-bottom: 24px;
     }
   }
+}
 
-  .worker-specialty {
-    margin-bottom: 16px;
-    font-family: var(--main-font);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    color: var(--prymari-text-color);
-  }
+.worker-specialty {
+  margin-bottom: 16px;
+  font-family: var(--main-font);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: var(--prymari-text-color);
+}
 
-  .social-list {
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30px;
+  margin-left: 30px;
+
+  &__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 30px;
-    margin-left: 30px;
-
-    &__link {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-    }
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
   }
+}
 
-  .social-list-icon {
-    width: 20px;
-    height: 20px;
-    fill: var(--social-icon-color);
-  }
+.social-list-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--social-icon-color);
 }
 
 // .team-section {
