--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,6 @@
   background: var(--footer-bgc);
   padding-top: 60px;
   padding-bottom: 60px;
-  width: 480px;
 
   .logo {
     margin: 0;
@@ -75,7 +74,7 @@
 
 .invite-form-input {
   height: 50px;
-  width: 450px;
+  width: 100%;
   margin-bottom: 20px;
   margin-right: 12px;
   padding-left: 16px;
