--- a/css/main.css
+++ b/css/main.css
@@ -77,14 +77,21 @@ img {
   justify-content: space-between;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
 @media screen and (min-width: 768px) {
-  .contaier {
+  .container {
     width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .contaier {
+  .container {
     width: 1200px;
   }
 }
@@ -373,7 +380,6 @@ img {
 .invite-btn {
   min-width: 136px;
   padding: 10px 29px;
-  padding-right: 62px;
   margin: auto;
   font-family: var(--main-font);
   cursor: pointer;
@@ -390,10 +396,16 @@ img {
 }
 
 .invite-btn__icon {
-  position: absolute;
-  bottom: 0;
-  right: 28px;
-  transform: translateY(-50%);
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .invite-btn__icon {
+    position: absolute;
+    bottom: 0;
+    right: 28px;
+    transform: translateY(-50%);
+  }
 }
 
 .btn {
@@ -431,118 +443,126 @@ img {
 }
 
 .header {
+  padding-top: 16px;
+  padding-bottom: 16px;
   padding-left: 15px;
-  width: 480px;
+}
+
+.menu-mobile {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.menu-mobile:hover, .menu-mobile:focus {
+  fill: var(--focus-color);
+}
+
+.menu-icon {
+  width: 40px;
+  height: 40px;
 }
 
 .is-open {
-  transform: translateY(0) translateX(-100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0);
 }
 
-@media screen and (min-width: 480px) {
-  .menu-mobile {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .menu-mobile:hover, .menu-mobile:focus {
-    fill: var(--focus-color);
-  }
-  .menu-icon {
-    width: 40px;
-    height: 40px;
-  }
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  max-width: 480px;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--main-bgc);
+  transform: translateY(-100%) translateX(-50%);
 }
 
-@media screen and (min-width: 480px) and (min-width: 768px) {
-  .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    max-width: 480px;
-    padding: 48px 40px;
-    background-color: var(--main-bgc);
-    transform: translateY(-100%) translateX(100%);
-  }
+.mobile-menu__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 480px) {
-  .mobile-menu__close-btn {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
-    fill: var(--focus-color);
-  }
-  .mobile-menu__close-icon {
-    width: 19px;
-    height: 19px;
-  }
-  .mobile-menu__item {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.17;
-    text-align: left;
-  }
-  .mobile-menu__list {
-    margin-bottom: 302px;
-  }
-  .mobile-menu__link {
-    color: var(--title-text-color);
-  }
-  .mobile-menu__link:hover, .mobile-menu__link:focus {
-    color: var(--focus-color);
-  }
-  .mobile-menu .current {
-    color: var(--focus-color);
-  }
-  .mobile-menu .mobile-contact {
-    margin-bottom: 64px;
-  }
-  .mobile-menu .mobile-contact__link-tel {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.18;
-    margin-bottom: 32px;
-    color: var(--focus-color);
-  }
-  .mobile-menu .mobile-contact__link-mail {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.17;
-    color: var(--prymari-text-color);
-  }
-  .mobile-menu .social {
-    display: flex;
-    max-width: 767vw;
-  }
-  .mobile-menu .social__link {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: var(--focus-color);
-  }
-  .mobile-menu .social__item:not(:last-child)::after {
-    content: "";
-    width: 0;
-    height: 22px;
-    margin: 0px 10px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transform: rotate(90deg);
-  }
+.mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+  fill: var(--focus-color);
+}
+
+.mobile-menu__close-icon {
+  width: 19px;
+  height: 19px;
+}
+
+.mobile-menu__item {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: left;
+}
+
+.mobile-menu__list {
+  margin-bottom: 302px;
+}
+
+.mobile-menu__link {
+  color: var(--title-text-color);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--focus-color);
+}
+
+.current {
+  color: var(--focus-color);
+}
+
+.mobile-contact {
+  margin-bottom: 64px;
+}
+
+.mobile-contact__link-tel {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  margin-bottom: 32px;
+  color: var(--focus-color);
+}
+
+.mobile-contact__link-mail {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--prymari-text-color);
+}
+
+.social {
+  display: flex;
+  max-width: 767vw;
+}
+
+.social__link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--focus-color);
+}
+
+.social__item:not(:last-child)::after {
+  content: "";
+  width: 0;
+  height: 22px;
+  margin: 0px 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
 
 @media screen and (max-width: 767px) {
@@ -557,41 +577,6 @@ img {
   }
   .mobile-menu {
     display: none;
-  }
-  .site-nav {
-    display: flex;
-  }
-  .site-nav__item {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    color: var(--title-text-color);
-  }
-  .site-nav__link {
-    display: block;
-  }
-  .site-nav__item:not(:last-child) {
-    margin-right: 50px;
-  }
-  .site-nav .contact {
-    display: block;
-    align-items: center;
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    color: var(--prymari-text-color);
-  }
-  .site-nav__mail-img {
-    width: 16px;
-    height: 12px;
-  }
-  .site-nav__phone-img {
-    width: 12px;
-    height: 16px;
   }
 }
 
@@ -636,12 +621,10 @@ img {
 }
 
 .features-list__img {
-  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
-  width: 450px;
   height: 120px;
   background: var(--team-selection-bgc);
   border-radius: 4px;
@@ -737,7 +720,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 210px;
+  width: 210px;
   height: 92px;
   margin-left: 30px;
   margin-top: 30px;
@@ -796,7 +779,6 @@ img {
   background: var(--footer-bgc);
   padding-top: 60px;
   padding-bottom: 60px;
-  width: 480px;
 }
 
 .footer .logo {
@@ -868,7 +850,7 @@ img {
 
 .invite-form-input {
   height: 50px;
-  width: 450px;
+  width: 100%;
   margin-bottom: 20px;
   margin-right: 12px;
   padding-left: 16px;
