--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 210px;
+    width: 210px;
     height: 92px;
     margin-left: 30px;
     margin-top: 30px;
