--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,137 +1,128 @@
 .header {
+  padding-top: 16px;
+  padding-bottom: 16px;
   padding-left: 15px;
-  width: 480px;
+}
+
+.menu-mobile {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+
+  &:hover,
+  &:focus {
+    fill: var(--focus-color);
+  }
+}
+
+.menu-icon {
+  width: 40px;
+  height: 40px;
 }
 
 .is-open {
-  transform: translateY(0) translateX(-100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0);
 }
 
-@media screen and (min-width: 480px) {
-  // .container {
-  //   width: 480px;
-  //   margin: 0 auto;
-  // }
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  max-width: 480px;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--main-bgc);
 
-  .menu-mobile {
+  transform: translateY(-100%) translateX(-50%);
+
+  &__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
     background-color: transparent;
     border: none;
     padding: 0;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
       fill: var(--focus-color);
     }
   }
-
-  .menu-icon {
-    width: 40px;
-    height: 40px;
+  &__close-icon {
+    width: 19px;
+    height: 19px;
   }
 
-  .mobile-menu {
-    @media screen and (min-width: 768px) {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      max-width: 480px;
-      padding: 48px 40px;
-      background-color: var(--main-bgc);
+  &__item {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    text-align: left;
+  }
 
-      transform: translateY(-100%) translateX(100%);
-    }
-    &__close-btn {
-      position: absolute;
-      top: 10px;
-      right: 15px;
+  &__list {
+    margin-bottom: 302px;
+  }
 
-      background-color: transparent;
-      border: none;
-      padding: 0;
+  &__link {
+    color: var(--title-text-color);
 
-      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-      &:hover,
-      &:focus {
-        fill: var(--focus-color);
-      }
-    }
-    &__close-icon {
-      width: 19px;
-      height: 19px;
-    }
-
-    &__item {
-      font-family: var(--main-font);
-      font-weight: 500;
-      font-size: 40px;
-      line-height: 1.17;
-      text-align: left;
-    }
-
-    &__list {
-      margin-bottom: 302px;
-    }
-
-    &__link {
-      color: var(--title-text-color);
-
-      &:hover,
-      &:focus {
-        color: var(--focus-color);
-      }
-    }
-
-    .current {
+    &:hover,
+    &:focus {
       color: var(--focus-color);
     }
+  }
+}
+.current {
+  color: var(--focus-color);
+}
 
-    .mobile-contact {
-      margin-bottom: 64px;
+.mobile-contact {
+  margin-bottom: 64px;
 
-      &__link-tel {
-        font-family: var(--main-font);
-        font-weight: 500;
-        font-size: 34px;
-        line-height: 1.18;
-        margin-bottom: 32px;
-        color: var(--focus-color);
-      }
+  &__link-tel {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    margin-bottom: 32px;
+    color: var(--focus-color);
+  }
 
-      &__link-mail {
-        font-family: var(--main-font);
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 1.17;
-        color: var(--prymari-text-color);
-      }
-    }
+  &__link-mail {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    color: var(--prymari-text-color);
+  }
+}
 
-    .social {
-      display: flex;
-      max-width: 767vw;
+.social {
+  display: flex;
+  max-width: 767vw;
 
-      &__link {
-        font-family: var(--main-font);
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
-        color: var(--focus-color);
-      }
+  &__link {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--focus-color);
+  }
 
-      &__item:not(:last-child)::after {
-        content: "";
-        width: 0;
-        height: 22px;
-        margin: 0px 10px;
-        border: 1px solid rgba(33, 33, 33, 0.2);
-        transform: rotate(90deg);
-      }
-    }
+  &__item:not(:last-child)::after {
+    content: "";
+    width: 0;
+    height: 22px;
+    margin: 0px 10px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
   }
 }
 
@@ -150,44 +141,44 @@
     display: none;
   }
 
-  .site-nav {
-    display: flex;
+  // .site-nav {
+  //   display: flex;
 
-    &__item {
-      padding-top: 32px;
-      padding-bottom: 32px;
-      font-family: var(--main-font);
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.14;
-      color: var(--title-text-color);
-    }
-    &__link {
-      display: block;
-    }
+  //   &__item {
+  //     padding-top: 32px;
+  //     padding-bottom: 32px;
+  //     font-family: var(--main-font);
+  //     font-weight: 500;
+  //     font-size: 14px;
+  //     line-height: 1.14;
+  //     color: var(--title-text-color);
+  //   }
+  //   &__link {
+  //     display: block;
+  //   }
 
-    &__item:not(:last-child) {
-      margin-right: 50px;
-    }
-    & .contact {
-      display: block;
-      align-items: center;
-      font-family: var(--main-font);
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.14;
-      color: var(--prymari-text-color);
-    }
+  //   &__item:not(:last-child) {
+  //     margin-right: 50px;
+  //   }
+  //   & .contact {
+  //     display: block;
+  //     align-items: center;
+  //     font-family: var(--main-font);
+  //     font-weight: 500;
+  //     font-size: 14px;
+  //     line-height: 1.14;
+  //     color: var(--prymari-text-color);
+  //   }
 
-    &__mail-img {
-      width: 16px;
-      height: 12px;
-    }
-    &__phone-img {
-      width: 12px;
-      height: 16px;
-    }
-  }
+  //   &__mail-img {
+  //     width: 16px;
+  //     height: 12px;
+  //   }
+  //   &__phone-img {
+  //     width: 12px;
+  //     height: 16px;
+  //   }
+  // }
 }
 
 // .header {
