--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,135 +4,147 @@
   padding-left: 15px;
 }
 
-.menu-mobile {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-
-  &:hover,
-  &:focus {
-    fill: var(--focus-color);
-  }
-}
-
-.menu-icon {
-  width: 40px;
-  height: 40px;
-}
-
-.is-open {
-  transform: translateY(0);
-}
-
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  max-width: 480px;
-  height: 100vh;
-  padding: 48px 40px;
-  background-color: var(--main-bgc);
-
-  transform: translateY(-100%) translateX(-50%);
-
-  &__close-btn {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-
-    background-color: transparent;
-    border: none;
-    padding: 0;
-
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-      fill: var(--focus-color);
-    }
-  }
-  &__close-icon {
-    width: 19px;
-    height: 19px;
-  }
-
-  &__item {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.17;
-    text-align: left;
-  }
-
-  &__list {
-    margin-bottom: 302px;
-  }
-
-  &__link {
-    color: var(--title-text-color);
-
-    &:hover,
-    &:focus {
-      color: var(--focus-color);
-    }
-  }
-}
 .current {
   color: var(--focus-color);
-}
-
-.mobile-contact {
-  margin-bottom: 64px;
-
-  &__link-tel {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.18;
-    margin-bottom: 32px;
-    color: var(--focus-color);
-  }
-
-  &__link-mail {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 1.17;
-    color: var(--prymari-text-color);
-  }
-}
-
-.social {
-  display: flex;
-  max-width: 767vw;
-
-  &__link {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: var(--focus-color);
-  }
-
-  &__item:not(:last-child)::after {
-    content: "";
-    width: 0;
-    height: 22px;
-    margin: 0px 10px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transform: rotate(90deg);
-  }
 }
 
 @media screen and (max-width: 767px) {
   .site-nav {
     display: none;
   }
+
+  .contact-nav {
+    display: none;
+  }
+
+  .menu-mobile {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+
+    &:hover,
+    &:focus {
+      fill: var(--focus-color);
+    }
+  }
+
+  .menu-icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    max-width: 480px;
+    height: 100vh;
+    padding: 48px 40px;
+    background-color: var(--main-bgc);
+
+    transform: translateY(-100%);
+
+    &__close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+
+      background-color: transparent;
+      border: none;
+      padding: 0;
+
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        fill: var(--focus-color);
+      }
+    }
+    &__close-icon {
+      width: 19px;
+      height: 19px;
+    }
+
+    &__item {
+      font-family: var(--main-font);
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 1.17;
+      text-align: left;
+    }
+
+    &__list {
+      margin-bottom: 302px;
+    }
+
+    &__link {
+      color: var(--title-text-color);
+
+      &:hover,
+      &:focus {
+        color: var(--focus-color);
+      }
+    }
+  }
+
+  .mobile-contact {
+    margin-bottom: 64px;
+
+    &__link-tel {
+      font-family: var(--main-font);
+      font-weight: 500;
+      font-size: 34px;
+      line-height: 1.18;
+      margin-bottom: 32px;
+      color: var(--focus-color);
+    }
+
+    &__link-mail {
+      font-family: var(--main-font);
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 1.17;
+      color: var(--prymari-text-color);
+    }
+  }
+
+  .social {
+    display: flex;
+    max-width: 767vw;
+
+    &__link {
+      font-family: var(--main-font);
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 22px;
+      color: var(--focus-color);
+    }
+
+    &__item:not(:last-child)::after {
+      content: "";
+      width: 0;
+      height: 22px;
+      margin: 0px 10px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      transform: rotate(90deg);
+    }
+  }
+}
+
+.is-open {
+  transform: translateY(0);
 }
 
 @media screen and (min-width: 768px) {
+  .header {
+    border-bottom: 1px solid #ececec;
+    .logo {
+      margin-right: 0px;
+    }
+  }
+
   .menu-mobile {
     display: none;
   }
@@ -141,46 +153,57 @@
     display: none;
   }
 
-  // .site-nav {
-  //   display: flex;
+  .site-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-  //   &__item {
-  //     padding-top: 32px;
-  //     padding-bottom: 32px;
-  //     font-family: var(--main-font);
-  //     font-weight: 500;
-  //     font-size: 14px;
-  //     line-height: 1.14;
-  //     color: var(--title-text-color);
-  //   }
-  //   &__link {
-  //     display: block;
-  //   }
+    &__link {
+      display: flex;
+      padding-top: 32px;
+      padding-bottom: 32px;
+      font-family: var(--main-font);
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      color: var(--title-text-color);
+    }
 
-  //   &__item:not(:last-child) {
-  //     margin-right: 50px;
-  //   }
-  //   & .contact {
-  //     display: block;
-  //     align-items: center;
-  //     font-family: var(--main-font);
-  //     font-weight: 500;
-  //     font-size: 14px;
-  //     line-height: 1.14;
-  //     color: var(--prymari-text-color);
-  //   }
-
-  //   &__mail-img {
-  //     width: 16px;
-  //     height: 12px;
-  //   }
-  //   &__phone-img {
-  //     width: 12px;
-  //     height: 16px;
-  //   }
-  // }
+    &__item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 }
 
+.contact-nav {
+  &__link {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    color: var(--prymari-text-color);
+  }
+
+  &__mail {
+    margin-bottom: 10px;
+  }
+
+  &__mail-img {
+    width: 16px;
+    height: 12px;
+    fill: var(--prymari-text-color);
+    margin-right: 8px;
+  }
+  &__phone-img {
+    width: 12px;
+    height: 16px;
+    fill: var(--prymari-text-color);
+    margin-right: 8px;
+  }
+}
 // .header {
 //   border-bottom: 1px solid #ececec;
 // }
